Added extend-rule for extending cached css rules. Changed transforms to accept full value not multiply.

--- a/scss/example/foundations/space.scss
+++ b/scss/example/foundations/space.scss
@@ -1,4 +1,4 @@
-@use "../cache";
+@use "../../cache";
 
 $space-px: cache.add-root-var("space-px", cache.rem(1));
 $space-sm: cache.add-root-var("space-sm", cache.rem(4));
